# AI_intro

./: .gitignore  README.MD  perceptron.ipynb  perceptron.py  pyproject.toml
